--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<html style="
-overflow: hidden;
-height: 100%;
-">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -29,18 +26,9 @@ height: 100%;
     -->
     <title>React App</title>
   </head>
-  <body style="
-  height: 100%;
-  box-sizing: border-box;
-  background: #3c3c3c;
-  ">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="overflow-y: 
-    scroll; height: 100%; 
-    height: 85%; 
-    margin-top: 40px; 
-    padding-bottom: 100px;
-    "></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -52,9 +40,4 @@ height: 100%;
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <style>
-    ::-webkit-scrollbar {
-      width: 0px;
-    }
-  </style>
 </html>
